--- a/calculator-app/calculator-client/index.html
+++ b/calculator-app/calculator-client/index.html
@@ -5,30 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app">
-      <div class="container">
-        <div id="calculator">
-          <h2>2+2</h2>
-          <input type="number" />
-          <div id="number-buttons">
-            <button class="number">0</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-          </div>
+    <div class="calculator">
+      <div class="app-header">
+        <div class="app-clock">
+          <span class="app-hour">09</span>:<span class="app-minute">41</span>:<span class="app-second">30</span>
         </div>
-        <div id="footer"></div>
+        <h3>Elma</h3>
       </div>
+      <div class="app-display app-history"></div>
+      <div class="app-display app-current">0</div>
+      <div class="app-body">
+        <button class="btn btn-function">AC</button>
+        <button class="btn btn-function">-/+</button>
+        <button class="btn btn-function">%</button>
+        <button class="btn btn-operation">/</button>
+        <button class="btn btn-number">7</button>
+        <button class="btn btn-number">8</button>
+        <button class="btn btn-number">9</button>
+        <button class="btn btn-operation">X</button>
+        <button class="btn btn-number">4</button>
+        <button class="btn btn-number">5</button>
+        <button class="btn btn-number">6</button>
+        <button class="btn btn-operation">-</button>
+        <button class="btn btn-number">1</button>
+        <button class="btn btn-number">2</button>
+        <button class="btn btn-number">3</button>
+        <button class="btn btn-operation">+</button>
+        <button class="btn btn-number" style="grid-column-start: 1; grid-column-end: 3; width: 100%">0</button>
+        <button class="btn btn-operation" style="color: white; background-color: #333">,</button>
+        <button class="btn btn-operation">=</button>
+      </div>
+      <div class="app-footer"></div>
     </div>
-    <script src="./index.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
