refactoring client side

--- a/calculator-app/calculator-client/index.html
+++ b/calculator-app/calculator-client/index.html
@@ -17,7 +17,10 @@
     <div class="calculator">
       <div class="app-header">
         <div class="app-clock">
-          <span class="app-hour">09</span>:<span class="app-minute">41</span>:<span class="app-second">30</span>
+          <span class="app-hour">09</span>:<span class="app-minute">41</span>:<span
+            class="app-second"
+            >30</span
+          >
         </div>
         <h3>Elma</h3>
       </div>
@@ -31,7 +34,7 @@
         <button class="btn btn-number">7</button>
         <button class="btn btn-number">8</button>
         <button class="btn btn-number">9</button>
-        <button class="btn btn-operation">X</button>
+        <button class="btn btn-operation">x</button>
         <button class="btn btn-number">4</button>
         <button class="btn btn-number">5</button>
         <button class="btn btn-number">6</button>
@@ -40,8 +43,15 @@
         <button class="btn btn-number">2</button>
         <button class="btn btn-number">3</button>
         <button class="btn btn-operation">+</button>
-        <button class="btn btn-number" style="grid-column-start: 1; grid-column-end: 3; width: 100%">0</button>
-        <button class="btn btn-operation" style="color: white; background-color: #333">,</button>
+        <button
+          class="btn btn-number"
+          style="grid-column-start: 1; grid-column-end: 3; width: 100%"
+        >
+          0
+        </button>
+        <button class="btn btn-operation" style="color: white; background-color: #333">
+          ,
+        </button>
         <button class="btn btn-operation">=</button>
       </div>
       <div class="app-footer"></div>
